<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".presentation.Activity.MainActivity">

    <TextView
        android:id="@+id/selectedUser"
        android:layout_width="142dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/edit_text"
        android:fadingEdge="horizontal|vertical|none"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profilePass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profiles"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/Enter"
        android:layout_width="141dp"
        android:layout_height="75dp"
        android:layout_marginStart="396dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/btn_default"
        android:backgroundTint="@color/test"
        android:text="Enter"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/profiles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <EditText
        android:id="@+id/profilePass"
        android:layout_width="185dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Enter password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/addProfile"
        android:layout_width="197dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/btn_default"
        android:backgroundTint="@color/test"
        android:text="Add Profile"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/profiles"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="@+id/profiles"
        app:layout_constraintTop_toBottomOf="@+id/profiles" />

    <Button
        android:id="@+id/deleteProfile"
        android:layout_width="197dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="104dp"
        android:background="@android:drawable/btn_default"
        android:backgroundTint="@color/test"
        android:text="Delete"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/addProfile"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="@+id/profiles"
        app:layout_constraintTop_toBottomOf="@+id/profiles" />

    <ListView
        android:id="@+id/profiles"
        android:layout_width="491dp"
        android:layout_height="531dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/picture_frame"
        android:backgroundTint="@color/test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePass" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="618dp"
        android:layout_height="107dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/background_light"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/profilePass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="198dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="FLASHY"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/profilePass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>