<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".presentation.Activity.FlashyRegistrationActivity">

    <Button
        android:id="@+id/cancelReg"
        android:layout_width="197dp"
        android:layout_height="101dp"
        android:layout_marginBottom="256dp"
        android:background="@android:drawable/btn_default_small"
        android:backgroundTint="@color/test"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="197dp"
        android:layout_height="101dp"
        android:layout_marginBottom="256dp"
        android:background="@android:drawable/btn_default_small"
        android:backgroundTint="@color/test"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPass"
        android:layout_width="535dp"
        android:layout_height="85dp"
        android:layout_marginTop="28dp"
        android:gravity="center|left"
        android:text="@string/enter_password"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="535dp"
        android:layout_height="85dp"
        android:layout_marginTop="48dp"
        android:gravity="left"
        android:text="@string/enter_username"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="527dp"
        android:layout_height="84dp"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Passwoord"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="527dp"
        android:layout_height="84dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUser" />

</android.support.constraint.ConstraintLayout>