...
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.156" />

            <Button
                android:id="@+id/logOut"
                android:layout_width="442dp"
                android:layout_height="128dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
...
                android:textColor="@android:color/background_light"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.468"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deckList"
                app:layout_constraintVertical_bias="0.402" />

            <Button
                android:id="@+id/deckList"
                android:layout_width="442dp"
                android:layout_height="128dp"
...
